@@ -363,6 +363,18 @@ or online on <ulink url="http://doc.opensuse.org"/>.
   </section>
 
   <section>
+   <!-- bnc#901511 -->
+   <title>Unable to Search Packages in GTK YaST</title>
+   <para>
+    The GTK interface for YaST do not contain a search box. So if you
+    are in GNOME or in XFCE and you need this feature, you can easily
+    reach it using the QT front-end:
+   </para>
+
+   <screen>sudo /sbin/yast2 --qt</screen>
+  </section>
+
+  <section>
    <!-- bnc#902947 -->
    <title>openSUSE pre-13.2 cifstab Migration</title>
 
