@@ -2,7 +2,8 @@
   Installer and Keyboard Settings (bnc#903242); YaST (Qt GUI): "Service
   Manager" Icon Appears Twice (bnc#903243).
 - New entry: Missing Dependencies for virt-manager (bnc#901869).
-- New entry: Network After an Update With YaST (bnc#895447)
+- New entry: Network After an Update With YaST (bnc#895447).
+- New entry: Unable to Search Packages in GTK YaST (bnc#901511).
 
 13.2.20141030:
 - Update translations.
